apps/mautrix/googlechat/overlays/nishir-tailnet/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: googlechat
spec:
  gatewayClassName: googlechat
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: googlechat-i-shikanime-studio-tls
            group: ""
            kind: Secret
