apps/mautrix/googlechat/overlays/nishir-tailnet/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: googlechat-redirect
spec:
  hostnames:
      - googlechat.i.shikanime.studio
  parentRefs:
    - name: googlechat
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
