apps/mautrix/googlechat/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: googlechat
spec:
  hostnames:
    - googlechat.i.shikanime.studio
  parentRefs:
    - name: googlechat
      sectionName: https
  rules:
    - backendRefs:
        - name: mautrix-googlechat
          port: http
