apps/mautrix/googlechat/overlays/nishir-tailnet/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: googlechat
spec:
  hostnames:
    - googlechat.i.shikanime.studio
  parentRefs:
    - name: googlechat
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: googlechat-redirect
spec:
  hostnames:
    - googlechat.i.shikanime.studio
  parentRefs:
    - name: googlechat
      sectionName: http
